src/components/Table/tableStyle.css
.table-wrapper {
  border-radius: 6px;
  background: #fff;
  overflow: hidden;
}

table {
  width: 100%;
  overflow: auto;
  display: grid;
  grid-template-columns:
    minmax(150px, 3fr) minmax(150px, 1fr) minmax(150px, 1fr)
    minmax(150px, 1fr) minmax(150px, 1fr) minmax(150px, 1fr) minmax(150px, 1fr);
}

table thead,
table tbody,
table tr {
  display: contents;
}

table th {
  position: relative;
  font-size: 18px;
  background-color: #c6dbf5;
}

table th,
table td {
  text-align: left;
  padding: 16px 20px;
}

table th span,
table tbody td {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  user-select: none;
}

table tr td {
  border-top: 1px solid #ccc;
}

.resize-handle {
  display: block;
  position: absolute;
  cursor: col-resize;
  width: 7px;
  right: 0;
  top: 0;
  z-index: 1;
  border-right: 2px solid #00000005;
}

.resize-handle:hover {
  border-color: #ccc;
}

.resize-handle.active {
  border-color: #517ea5;
}

.type1Color {
  background-color: #edebeb;
}

.type2Color {
  background-color: #feffd8;
}

.type3Color {
  background-color: #e9f5d7;
}

.type4Color {
  background-color: #ffeee4;
}

.choosedLog {
  box-shadow: inset 0px 0px 100px 0px rgba(67, 69, 226, 0.35),
    inset 0px -5px 0px -1px #9abfad, inset 0px 5px 1px 0px #e5ac3b;
}

